src/test/ui/issues/issue-6458-2.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-6458-2.rs:3:21
   |
LL |     format!("{:?}", None);
   |                     ^^^^ cannot infer type of the type parameter `T` declared on the enum `Option`
   |
help: consider specifying the generic argument
   |
LL |     format!("{:?}", None::<T>);
   |                         +++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
